package PAI.factory;

import PAI.domain.Teacher;

import java.util.List;

public interface ITeacherListFactory {
    List<Teacher> newList();
}
